--- a/src/css/Leftside1.module.css
+++ b/src/css/Leftside1.module.css
@@ -12,7 +12,8 @@
     border-style: solid;
     border-color: #E0E0E0;
     position: absolute;
-    margin-left: 20px;
+    margin-left: 0px;
+    background-color: #ffffff;
 }
 
 .contentscontainer{
@@ -137,22 +138,17 @@
     height: 26px;
     left: 41px;
     top: 495px;
-
     font-family: Noto Sans KR;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
-    /* identical to box height */
-
     display: flex;
     align-items: center;
     letter-spacing: 0.15px;
-
-    /* Gray 3 */
-
     color: #828282;
 }
+
 
 .mainLabel {
     color: var(--black);
