--- a/src/css/TechDashboard.module.css
+++ b/src/css/TechDashboard.module.css
@@ -237,3 +237,40 @@
   letter-spacing: -0.02em;
   text-align: left;
 }
+
+.discbutton {
+  width: 324px;
+  height: 48px; 
+  top: 15px;
+  background-color: #D5EBF8;;
+  border-radius: 8px;
+  font-family: Noto Sans KR;
+  font-size: 15px;
+}
+
+.top_title {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 29px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.15px;   
+  color: #6D6D6D;
+
+  margin-top: 107px;
+  margin-left: 24px;
+}
+
+.top_subtitle {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 46px;
+  color: #333333;
+
+  margin-top: 20px;
+  margin-left: 24px;
+}
