--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -2,7 +2,7 @@
 
 .headerbox{
     display: flex;
-    width: 1920px;
+    width: 100%;
     height: 90px;
     background-color: white; 
     border-width: 0px 0px 2px 0px ;
