--- a/src/css/Schedule.module.css
+++ b/src/css/Schedule.module.css
@@ -4,10 +4,10 @@
 
 .calendarpos {
   position: absolute;
-  width: 830px;
-  height: 500px;
-  top: 230px;
-  left: 391px;
+  width: 500px;
+  height: 100px;
+  top: 180px;
+  left: 20px;
 }
 
 .schebackground {
@@ -38,7 +38,7 @@
   font-family: Noto Sans KR;
   font-style: normal;
   font-weight: bold;
-  font-size: 32px;
+  font-size: 26px;
   line-height: 46px;
 
   color: #333333;
@@ -52,16 +52,16 @@
   padding: 8px 12px;
 
   position: absolute;
-  width: 98px;
-  height: 40px;
-  left: 1134px;
+  width: 88px;
+  height: 35px;
+  left: 420px;
   top: 192px;
 
   background: #2D9CDB;
   border-radius: 4px;
 
   font-family: Noto Sans KR;
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
@@ -163,6 +163,24 @@
   text-align: left;
 }
 
+.addinfo2 {
+  position: absolute;
+  left: 200px;
+  top: 225px;
+}
+
+.addinfo4 {
+  position: absolute;
+  left: 200px;
+  top: 385px;
+}
+
+.addinfo5 {
+  position: absolute;
+  left: 200px;
+  top: 465px;
+}
+
 .datepicker1 {
   position: absolute;
   height: 48px;
@@ -254,8 +272,8 @@
   position: absolute;
   width: 114px;
   height: 48px;
-  top: 600px;
-  left: 670px;
+  top: 570px;
+  left: 645px;
   background: #2D9CDB;
   border-radius: 6px;
 
