**CSS 보고서 제출 전 최종

--- a/src/css/Leftside1.module.css
+++ b/src/css/Leftside1.module.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     width: 339px;
     height: 1848px;
+    /* height: 100%; */
     left: 0px;
     top: 91px;
     border-width: 0px 2px 0px 0px ;
