--- a/src/css/TheaterInfoPanel.module.css
+++ b/src/css/TheaterInfoPanel.module.css
@@ -4,6 +4,13 @@
 .fullbox {
 }
 
+.background {
+  background-size: cover;
+  height: 100vh;
+  left: 0px;
+  top: 0px;
+  background-color: #F6F7FB;
+}
 .notosanskr_bold_black_24px {
   color: var(--black);
   font-family: var(--font-family-noto_sans_kr);
@@ -39,6 +46,7 @@
   width: 1496px;
   left: 364px;
   top: 176px;
+  background-color: #ffffff;
 }
 
 .layout_top {
@@ -46,29 +54,53 @@
   width: 1400px;
 }
 
-.layout_top_txt1 {
-  color: rgb(134, 134, 134);
-  font-family: var(--font-family-noto_sans_kr);
-  font-size: 29px;
-  font-weight: 500;
+.top_title {
+  font-family: Noto Sans KR;
   font-style: normal;
-  margin-top: 107px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 29px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.15px; 
+  color: #6D6D6D;
+  margin-top: 39px;
   margin-left: 24px;
 }
 
-.layout_top_txt2 {
-  color: black;
-  font-family: var(--font-family-noto_sans_kr);
-  font-size: 46px;
-  font-weight: 500;
+.top_subtitle {
+  font-family: Noto Sans KR;
   font-style: normal;
-  margin-top: 20px;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 46px;
+  color: #333333;
+  margin-top: 5px;
   margin-left: 24px;
 }
 
-.layout_top_image {
+.photobox {
+  width:1296px;
+  height:470px;
+  overflow:hidden;
   margin-top: 37px;
   margin-left: 100px;
+}
+
+.photo {
+  width:100%;
+  height:100%;
+  object-fit:cover;
+}
+
+.photos {
+  width: 840px;
+  margin-left: 20px;
+  margin-top: 20px;
+  /* border-style: solid;
+  border-radius: 20px;
+  border-width: 1.5px;
+  border-color: #c9c9c9; */
 }
 
 .layout_top_table {
@@ -85,8 +117,6 @@
   font-style: normal;
 }
 
-.layout_body_drawing {
-}
 
 .layout_body_picture {
   margin-left: 40px;
